Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job__c/fields/Continue_on_failure__c.field-meta.xml
<CustomField>
    <fullName>Continue_on_failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continue on failure</label>
    <type>Checkbox</type>
</CustomField>