Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job__c/fields/dataJSON__c.field-meta.xml
<CustomField>
    <fullName>dataJSON__c</fullName>
    <label>dataJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>