Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>External CI Jobs</relationshipLabel>
    <relationshipName>External_CI_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>