Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job__c/fields/Invoke_on__c.field-meta.xml
<CustomField>
    <fullName>Invoke_on__c</fullName>
    <label>Invoke on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before deployment</fullName>
            </value>
            <value>
                <fullName>After deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>