Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job__c/fields/Job_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Api_Name__c</fullName>
    <label>Job Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>