Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job__c/fields/Timeout_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Timeout_in_minutes__c</fullName>
    <label>Timeout in minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>