Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>External CI Jobs</relationshipLabel>
    <relationshipName>External_CI_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>