Dummy_Package_for_scratch_org/main/default/objects/External_CI_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_CI_Setting__c</columns>
    <columns>Job_Api_Name__c</columns>
    <columns>Invoke_on__c</columns>
    <columns>Continue_on_failure__c</columns>
    <columns>Timeout_in_minutes__c</columns>
    <columns>User_Story__c</columns>
    <columns>Environment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>